--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- /// <reference path="../typings/globals/jquery/index.d.ts" /> -->
 <head>
-    <title>Workshop 3</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
